--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                <div class="col-md-4">
                    <div class="widraw status">
                          <h5>Withdraw</h5>
-                         <h2>$00</h2>
+                         <h2>$ <span id="currentWithdrow">00</span> </h2>
                    </div>
                </div>
                <div class="col-md-4">
@@ -88,7 +88,11 @@
             const withdrawBtn = document.getElementById("addWithdraw");
             withdrawBtn.addEventListener("click", function(){
                  const withdrawNumber = getInputNumber("withdrawAmount");
-                 console.log(withdrawNumber);
+                 
+                 updateSpanText("currentWithdrow",withdrawNumber );
+                 updateSpanText("currentBalance", -1 * withdrawNumber );
+                  
+                 document.getElementById("depositAmount"). value = "";
 
             })
               function getInputNumber(id){
